--- a/src/Feature/PresentationVisualizer/code/Feature.PresentationVisualizer.csproj
+++ b/src/Feature/PresentationVisualizer/code/Feature.PresentationVisualizer.csproj
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="Current" DefaultTargets="Build"
-  xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="Current" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -8,7 +7,7 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>39a6a29b-c609-4e7b-b77a-b06f55c0bc5e</ProjectGuid>
+    <ProjectGuid>{39A6A29B-C609-4E7B-B77A-B06F55C0BC5E}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -67,7 +66,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="**\*.cs" Exclude="$(BaseIntermediateOutputPath)**\*.*;bin\**\*.*;" />
+    <Compile Include="sitecore modules\Web\PresentationVisualizer\Visualisation.aspx.cs">
+      <DependentUpon>Visualisation.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="sitecore modules\Web\PresentationVisualizer\Visualisation.aspx.designer.cs">
+      <DependentUpon>Visualisation.aspx</DependentUpon>
+    </Compile>
     <Content Include="App_Config\Include\Feature\Feature.PresentationVisualizer.config" />
+    <Content Include="sitecore modules\Web\PresentationVisualizer\Visualisation.aspx" />
     <None Include="Properties\PublishProfiles\Default.pubxml" />
     <None Include="README.md" />
     <None Include="web.config" />
