--- a/src/Feature/PresentationVisualizer/code/App_Config/Include/Feature/Feature.PresentationVisualizer.config
+++ b/src/Feature/PresentationVisualizer/code/App_Config/Include/Feature/Feature.PresentationVisualizer.config
@@ -1,7 +1,8 @@
-<?xml version="1.0"?>
-
-<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
-  <sitecore>
-
-  </sitecore>
+<?xml version="1.0" encoding="utf-8"?>
+<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:role="http://www.sitecore.net/xmlconfig/role/">
+    <sitecore role:require="Standalone or ContentDelivery or ContentManagement">
+        <commands>
+            <command name="presentationvisualizer:visualize" type="Feature.PresentationVisualizer.Commands.Visualize, Feature.PresentationVisualizer" />
+        </commands>
+    </sitecore>
 </configuration>
