--- a/src/Feature/PresentationVisualizer/code/Feature.PresentationVisualizer.csproj
+++ b/src/Feature/PresentationVisualizer/code/Feature.PresentationVisualizer.csproj
@@ -66,15 +66,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="**\*.cs" Exclude="$(BaseIntermediateOutputPath)**\*.*;bin\**\*.*;" />
-    <Compile Include="sitecore modules\Web\PresentationVisualizer\Visualisation.aspx.cs">
-      <DependentUpon>Visualisation.aspx</DependentUpon>
+    <Compile Include="Commands\Visualize.cs" />
+    <Compile Include="sitecore modules\Web\PresentationVisualizer\Visualization.aspx.cs">
+      <DependentUpon>Visualization.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="sitecore modules\Web\PresentationVisualizer\Visualisation.aspx.designer.cs">
-      <DependentUpon>Visualisation.aspx</DependentUpon>
+    <Compile Include="sitecore modules\Web\PresentationVisualizer\Visualization.aspx.designer.cs">
+      <DependentUpon>Visualization.aspx</DependentUpon>
     </Compile>
     <Content Include="App_Config\Include\Feature\Feature.PresentationVisualizer.config" />
-    <Content Include="sitecore modules\Web\PresentationVisualizer\Visualisation.aspx" />
+    <Content Include="sitecore modules\Web\PresentationVisualizer\Visualization.aspx" />
     <None Include="Properties\PublishProfiles\Default.pubxml" />
     <None Include="README.md" />
     <None Include="web.config" />
